# microservices-poc

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose-cassandra.yml  docker-compose-kafka.yml  docker-compose-minio.yml  docker-compose-redis.yml  docker-compose.yml  generate-ssl-cert.sh
api-gateway/: Dockerfile  main.py  requirements.txt
api-gateway/protos/: user.proto
chat-service/: Dockerfile  main.py  requirements.txt
clients/: README.md  grpc_client.py  pyproject.toml  requirements.txt  rest_client.py  sse_client.py  websocket_client.py
message-persistence-service/: Dockerfile  main.py  requirements.txt
nginx-be/: Dockerfile  nginx.conf
nginx-fe/: Dockerfile  generate-cert-fallback.sh  nginx.conf
notification-service/: Dockerfile  main.py
order-service/: Dockerfile  main.py  requirements.txt
user-service/: Dockerfile  main.py
user-service/protos/: user.proto
web-client/: index.html
