[project]
name = "clients"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "cassandra-driver>=3.29.3",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "httpx>=0.28.1",
    "kafka-python>=2.3.0",
    "protobuf>=6.33.2",
    "redis>=7.1.0",
    "websockets>=15.0.1",
]
